--- a/server/public/style/style.css
+++ b/server/public/style/style.css
@@ -13,13 +13,12 @@ body {
 
 .congratulation {
 	color: #66ff33;
-	height: 40px;
+	font-size: 20px;
 }
 
 .glass {
 	align-self: center;
 	position: relative;
-	width: 300px;
 	height: 500px;
 	margin: auto;
 	border-left: 3px solid #fff;
@@ -31,7 +30,7 @@ body {
 }
 
 .water {
-	width: 300px;
+	width: 100%;
 	height: 0px;
 	max-height: 500px;
 	bottom: 0;
@@ -40,28 +39,24 @@ body {
 	transition: height 2s;
 }
 
-.main {
-	display: grid;
-	grid-template-columns: 20% 60% 20%;
-}
-
 .grid-item {
 	padding: 20px;
 }
 
 .control, .right {
 	padding: 20px;
+	margin: auto;
+	align-items: center;
 }
 
 .control > button {
-	display: block;
-	height: 80px;
-	min-width: 160px;
+	height: 20px;
+	min-width: 50px;
 	text-decoration: none;
 	background: #fff;
-	font-size: 20px;
+	font-size: 14px;
 	border: none;
-	margin: 20px;
+	margin: 5px auto;
 	border-radius: 5px;
 	cursor: pointer;
 }
@@ -70,8 +65,50 @@ body {
 	background: #aaa !important;	
 }
 
+.right {
+	text-align: center;
+}
+
 .right > ul {
 	list-style: none;
 	padding: 0;
 	font-size: 16px;
+	text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+
+	.congratulation {
+		color: #66ff33;
+		font-size: 35px;
+	}
+
+	.main {
+		display: grid;
+		grid-template-columns: 20% 60% 20%;
+	}
+
+	.glass {
+		width: 300px;
+	}
+	.control > button {
+		display: block;
+		height: 80px;
+		min-width: 160px;
+		text-decoration: none;
+		background: #fff;
+		font-size: 20px;
+		border: none;
+		margin: 20px auto;
+		border-radius: 5px;
+		cursor: pointer;
+	}
+
+	.right {
+		text-align: left;
+	}
+
+	.right > ul {
+		text-align: left;
+	}
 }
