--- a/server/public/style/style.css
+++ b/server/public/style/style.css
@@ -76,6 +76,11 @@ body {
 	text-align: center;
 }
 
+footer {
+	margin: 20px;
+	text-align: center;
+}
+
 @media only screen and (min-width: 768px) {
 
 	.congratulation {
