--- a/server/public/style/style.css
+++ b/server/public/style/style.css
@@ -5,6 +5,27 @@ body {
 	font-family: 'Montserrat', sans-serif;
 }
 
+@keyframes spin {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.spinner {
+	box-sizing: border-box;
+	display: block;
+	height: 50px;
+	width: 50px;
+	margin: 5px;
+	border: 5px solid blue;
+	border-color: blue transparent transparent transparent;
+	border-radius: 50%;
+	animation: spin 1.2s infinite;
+}
+
 .header {
 	height: 20vh;
 	text-align: center;
@@ -79,6 +100,43 @@ body {
 footer {
 	margin: 20px;
 	text-align: center;
+}
+
+/* Removes the clear button from date inputs */
+input[type="date"]::-webkit-clear-button {
+    display: none;
+}
+
+/* Removes the spin button */
+input[type="date"]::-webkit-inner-spin-button { 
+    display: none;
+}
+
+/* Always display the drop down caret */
+input[type="date"]::-webkit-calendar-picker-indicator {
+    color: #fff;
+    background: #000;
+}
+
+/* A few custom styles for date inputs */
+input[type="date"] {
+    appearance: none;
+    -webkit-appearance: none;
+    color: #fff;
+    font-family: "Montserrat", arial, sans-serif;
+    font-size: 18px;
+    border:1px solid #111;
+    background:#000;
+    padding:5px;
+    display: inline-block !important;
+    visibility: visible !important;
+}
+
+input[type="date"], focus {
+    color: #fff;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
 }
 
 @media only screen and (min-width: 768px) {
