--- a/server/public/style/style.css
+++ b/server/public/style/style.css
@@ -32,9 +32,12 @@ body {
 	margin-bottom: 20px;
 }
 
+/*.title {
+	font-size: 22px;
+}*/
+
 .congratulation {
 	color: #66ff33;
-	font-size: 20px;
 }
 
 .glass {
@@ -124,12 +127,13 @@ input[type="date"] {
     -webkit-appearance: none;
     color: #fff;
     font-family: "Montserrat", arial, sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     border:1px solid #111;
     background:#000;
     padding:5px;
-    display: inline-block !important;
+    display: block !important;
     visibility: visible !important;
+    margin: auto;
 }
 
 input[type="date"], focus {
@@ -141,9 +145,11 @@ input[type="date"], focus {
 
 @media only screen and (min-width: 768px) {
 
+
 	.congratulation {
 		color: #66ff33;
-		font-size: 35px;
+		font-size: 24px;
+		margin: 10px;
 	}
 
 	.main {
