--- a/server/public/style/style.css
+++ b/server/public/style/style.css
@@ -1,7 +1,7 @@
 body {
 	background: #000;
 	color: #fff;
-	padding: 10px 10px;
+	/*padding: 10px 10px;*/
 	font-family: 'Montserrat', sans-serif;
 }
 
@@ -30,7 +30,7 @@ body {
 
 .header {
 	text-align: center;
-	padding: 0 10px;
+	padding: 0 10px 10px 0;
 }
 
 .title {
@@ -109,8 +109,26 @@ footer {
 	text-align: center;
 }
 
+.flash {
+	text-align: center;
+}
+
+.success {
+	color: green;
+}
+
+.error {
+	color: red;
+}
+
 form {
-	height: 100%;
+	padding: 20px;
+	text-align: center;
+	border: 1px solid #222;
+}
+
+a {
+	color: #74ccf4;
 }
 
 form > input {
@@ -225,5 +243,10 @@ input[type="date"], focus {
 
 	.right > ul {
 		text-align: left;
+	}
+
+	form {
+		width: 30vw;
+		margin: auto;
 	}
 }
